# tarot_card_rest_api

./: README.md  db.sqlite3  pyproject.toml
data/: load_data.py  tarot-images.json
tarot_cards_rest/: database.py  main.py  models.py  schemas.py  utils.py
tarot_cards_rest/arcanas/: router.py
tarot_cards_rest/suits/: router.py
tarot_cards_rest/tarots/: router.py
tarot_cards_rest/tarots/fortunes/: router.py
tarot_cards_rest/tarots/keywords/: router.py
tarot_cards_rest/tarots/meanings/: router.py
tests/: test_endpoints.py
tests/responses/: get_arcana_major.json  get_suit_trump.json  get_tarot_fool.json  get_tarot_fool_fortunes.json  get_tarot_fool_keywords.json  get_tarot_fool_meanings.json
