[project]
name = "fast-api-rest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
